--- a/src/main/resources/templates/exam01-result.html
+++ b/src/main/resources/templates/exam01-result.html
@@ -7,13 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="exam01-result.html" 
-          th:action="@{/receive/result}" method="post">
-        名前:<input type="text" name="name"><br>
-        <button>送信</button>
-      
-    
-    </form>
+名前：<span th:text="${name}">田中太郎</span>
     
 </body>
 </html>
